# lcdd

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  main.py  pyproject.toml
docs/: protocol.md  rust-service.md
nix/: module.nix
src/: app.rs  config.rs  device.rs  lib.rs  logging.rs  main.rs  protocol.rs  screen.rs
src/config/: mod.rs  runtime.rs  schema.rs
src/experiment/: egl.rs  mod.rs
src/image/: dashboard.rs  dashboard_font.rs  jpeg.rs  mod.rs  packetize.rs  prepare.rs  source.rs
src/image/dashboard/: acrylic.rs  blur.wgsl  font.rs  mod.rs
src/image/dashboard/layouts/: grid_2x2.rs  mod.rs  shared.rs  stack.rs
tools/: aura_hid.py  aura_pcap.py  lcdd_hid.py  lcdd_pcap.py
