[package]
name = "lcdd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = { version = "0.15", default-features = false, features = ["toml", "ron", "corn"] }
ctrlc = "3.4"
fern = { version = "0.7.1", features=["colored"] }
font-kit = { version = "0.14", features = ["loader-freetype", "source-fontconfig"] }
hidapi = { version = "2.6", default-features = false, features = ["linux-shared-hidraw"] }
humantime = "2.3.0"
image = { version = "0.25", default-features = false, features = ["bmp", "ico", "jpeg", "png", "webp"] }
iced = { version = "0.14", default-features = false, features = ["advanced", "image", "thread-pool", "wgpu", "wayland"] }
iced_graphics = "0.14"
iced_runtime = "0.14"
iced_tiny_skia = { version = "0.14", features = ["image"] }
log = "0.4"
pathfinder_geometry = "0.5"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
sysinfo = { version = "0.37", default-features = false, features = ["component", "system"] }
wgpu = "27"
